--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -2,7 +2,11 @@ $transition: .4s cubic-bezier(0, 0.21, 0.88, 1.01);
 $border: $color-primary 0.0625rem solid;
 $heading-underscore-width: calc(100% * 0.2 * 2 - 0.5rem);
 
-$text-huge: 2.8125rem;
-$text-larger: 1.375rem;
-$text-large: 1.25rem;
+$text-normal: 0.85rem;
+
+$text-huge: 2.8125 * $text-normal;
+$text-larger: 1.375 * $text-normal;
+$text-large: 1.25 * $text-normal;
+
+$line-height: 1.4;
 
