--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -1,5 +1,8 @@
 $color-primary: #BEAC8F;
-$color-secondary: #9B2948;
+$color-secondary: #911939;
+$color-secondary-dark: #75001C;
+$color-secondary-background: #37091D;
+
 $color-black: #0F0017;
 $color-background: #231420;
 
