Icon settings, hover animations, control range fix

--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -1,4 +1,5 @@
 $color-primary: #BEAC8F;
+$color-hover: #ddcbad;
 $color-secondary: #911939;
 $color-secondary-dark: #75001C;
 $color-secondary-background: #37091D;
